--- a/greetings.html
+++ b/greetings.html
@@ -1,57 +1,144 @@
-<html> 
+<!-- original : https://codepen.io/SeanNorton/pen/LWBXQL -->
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-    <title>Greeting Message</title> 
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
     <style>
-#lbl {
-    font-family: monospace;
-    font-size: xx-large;
-    color: #626262;
-    padding: 5px;
-    border: 1px solid #ececec;
-    text-align: center;
-    line-height: 1.5;
-    height:85%
+        /*CSS RESETS*/
+        body {
+            background-color: #fff;
+            line-height: 1.6;
+        }
 
+        h1 {
+            margin-top: 0;
+        }
 
-}
-#date{
-    font-size:large;
-}
-body{
-    background-color: aliceblue;
-}
+        /*CSS START*/
+        .full-table {
+            display: table;
+            height: 100%;
+            width: 100%;
+        }
+
+        .table-cell {
+            display: table-cell;
+            vertical-align: middle;
+            text-align: center;
+        }
+
+        .card {
+            padding: 10px 25px 10px 25px;
+            border-radius: 10px;
+            background: #009688;
+            color: #fff;
+            display: inline-block;
+            box-shadow: 2px 2px 1px 0px #295c7b;
+        }
+
+        .card:hover {
+            margin-top: 2px;
+            box-shadow: none;
+        }
+
+        .clock {
+            display: inline-block;
+            font-family: "Roboto", sans-serif;
+            font-weight: bold;
+            font-size: 1.2em;
+        }
+
+        .time {
+            display: inline-block;
+            min-width: 37px;
+        }
+
+        .colon {
+            font-size: 1.1em;
+            display: inline-block;
+        }
+
+        .date {
+            display: block;
+            min-width: 162px;
+            font-family: "Roboto", sans-serif;
+            font-size: 1.2em;
+        }
+
+        .greet {
+            min-width: 162px;
+            font-family: "Roboto", sans-serif;
+            font-size: 1.2em;
+        }
     </style>
 </head>
+
 <body>
-    <div id="lbl"></div>
+    <link href="https://fonts.googleapis.com/css?family=Lobster|Roboto:400,700" rel="stylesheet" />
+    <div class="full-table">
+        <div class="table-cell">
+            <div class="card">
+                <div class="date" id="date"></div>
+                <div class="clock">
+                    <div class="time" id="hour"></div>
+                    <div class="colon">:</div>
+                    <div class="time" id="min"></div>
+                    <div class="colon">:</div>
+                    <div class="time" id="sec"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script>
+        function date() {
+            var weekday = new Array(7);
+
+            weekday[0] = "日";
+            weekday[1] = "一";
+            weekday[2] = "二";
+            weekday[3] = "三";
+            weekday[4] = "四";
+            weekday[5] = "五";
+            weekday[6] = "六";
+
+            var today = new Date();
+            var dayOfWeek = weekday[today.getDay()];
+            var date = today.getFullYear() + " / " + zeros(today.getMonth() + 1) + " / " + zeros(today.getDate()) + " ( " + dayOfWeek + " )";
+
+            document.getElementById("date").innerHTML = date;
+        }
+
+        function clock() {
+            var today = new Date();
+            var hour = zeros(today.getHours());
+            var minutes = zeros(today.getMinutes());
+            var seconds = zeros(today.getSeconds());
+
+            document.getElementById("hour").innerHTML = hour;
+            document.getElementById("min").innerHTML = minutes;
+            document.getElementById("sec").innerHTML = seconds;
+        }
+
+        // adds zero infront of single digit number
+        function zeros(num) {
+            if (num < 10) {
+                num = "0" + num;
+            }
+            return num;
+        }
+
+        function dateTime() {
+            date();
+            clock();
+            setTimeout(dateTime, 500);
+        }
+
+        dateTime();
+            // END
+    </script>
 </body>
 
-<script>
-    var weekday = new Array(7);
-    weekday[0] = "Sunday";
-    weekday[1] = "Monday";
-    weekday[2] = "Tuesday";
-    weekday[3] = "Wednesday";
-    weekday[4] = "Thursday";
-    weekday[5] = "Friday";
-    weekday[6] = "Saturday";
-
-    
-    var today = new Date();
-    var hrs = today.getHours();
-    var dayOfWeek = weekday[today.getDay()];
-    var date = dayOfWeek+" " + today.getDate() + "/" +(today.getMonth()+1) +'/'+today.getFullYear()  ;
-
-    var greet;
-
-    if (hrs < 12)
-        greet = 'Good Morning  ';
-    else if (hrs >= 12 && hrs <= 17)
-        greet = 'Good Afternoon ';
-    else if (hrs >= 17 && hrs <= 24)
-        greet = 'Good Evening  ';
-
-    document.getElementById('lbl').innerHTML =
-        greet+=`<div id="date"> It's ${date}</div>`;
-</script> 
 </html>
