--- a/greetings.html
+++ b/greetings.html
@@ -9,7 +9,7 @@
     <style>
         /*CSS RESETS*/
         body {
-            background-color: #fff;
+            background-color: #262626;
             line-height: 1.6;
         }
 
